fixed navigation menu covering header elements on safari mobile

--- a/src/styles/general/media-queries.css
+++ b/src/styles/general/media-queries.css
@@ -10,7 +10,7 @@
 
         position: absolute;
         left: 0;
-        top: -100%;
+        top: -110%;
         z-index: 10;
 
         width: 100vw;
